--- a/webapp/package.json
+++ b/webapp/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^1.1.2",
     "deepmerge": "^4.3.1",
     "react": "^18.2.0",
