--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.29.4",
     "mongodb": "^6.0.0",
+    "openai": "^4.5.0",
     "zod": "^3.22.2"
   },
   "scripts": {
