--- a/webapp/package.json
+++ b/webapp/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/colors": "^2.1.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^1.1.2",
+    "axios": "^1.5.0",
     "deepmerge": "^4.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
