--- a/webapp/package.json
+++ b/webapp/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/themes": "^1.1.2",
     "axios": "^1.5.0",
     "deepmerge": "^4.3.1",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
