--- a/webapp/package.json
+++ b/webapp/package.json
@@ -22,12 +22,14 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "redux-persist": "^6.0.0",
+    "websocket": "^1.0.34",
     "zod": "^3.22.2"
   },
   "devDependencies": {
     "@types/node": "^20.5.9",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/websocket": "^1.0.6",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
