--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
     "@types/fs-extra": "^11.0.1",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.5.9",
+    "@types/uuid": "^9.0.3",
     "@types/ws": "^8.5.5",
     "@typescript-eslint/eslint-plugin": "^6.6.0",
     "@typescript-eslint/parser": "^6.6.0",
@@ -27,6 +28,7 @@
     "moment": "^2.29.4",
     "mongodb": "^6.0.0",
     "openai": "^4.5.0",
+    "uuid": "^9.0.0",
     "ws": "^8.14.1",
     "zod": "^3.22.2"
   },
